--- a/profil_pertama/src/assets/globals.css
+++ b/profil_pertama/src/assets/globals.css
@@ -18,4 +18,8 @@
     background-color: #60a5fa; /* Warna biru yang lebih terang untuk dark mode */
   }
 
+  body.preloader-active {
+    overflow: hidden !important;
+    height: 100vh !important;
+  }
   
