--- a/profil_pertama/src/assets/globals.css
+++ b/profil_pertama/src/assets/globals.css
@@ -1,25 +1,38 @@
 /* styles/globals.css */
 .dropdown-content li button {
-    position: relative;
-  }
-  
-  .dropdown-content li button:hover::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 40%;
-    height: 2px;
-    background-color: #3b82f6; /* Warna biru Tailwind */
-  }
-  
-  .dark .dropdown-content li button:hover::after {
-    background-color: #60a5fa; /* Warna biru yang lebih terang untuk dark mode */
-  }
+  position: relative;
+}
 
-  body.preloader-active {
-    overflow: hidden !important;
-    height: 100vh !important;
-  }
-  
+.dropdown-content li button:hover::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40%;
+  height: 2px;
+  background-color: #3b82f6; /* Warna biru Tailwind */
+}
+
+.dark .dropdown-content li button:hover::after {
+  background-color: #60a5fa; /* Warna biru yang lebih terang untuk dark mode */
+}
+
+body.preloader-active {
+  overflow: hidden !important;
+  height: 100vh !important;
+}
+
+@keyframes glow {
+  0% { box-shadow: 0 0 5px #3B82F6; }
+  50% { box-shadow: 0 0 50px #3B82F6; }
+  100% { box-shadow: 0 0 5px #3B82F6; }
+}
+
+.glow-effect {
+  animation: glow 2s infinite;
+}
+
+.hover-glow:hover {
+  box-shadow: 0 0 25px #3B82F6;
+}
